fix: alignment and adding link to insta

--- a/components/About/About.module.css
+++ b/components/About/About.module.css
@@ -36,6 +36,12 @@
   color: var(--primary-green);
 }
 
+.container-about-me-description a {
+  text-decoration: none;
+  cursor: pointer;
+  color: var(--primary-yellow);
+}
+
 .background-img {
   position: absolute;
   height: 100%;
