--- a/components/Skills/Skills.module.css
+++ b/components/Skills/Skills.module.css
@@ -57,6 +57,7 @@
   }
 
   .container-skills-items {
+    padding-top: 10px;
     width: 75%;
   }
 
